--- a/src/templates/customStyle.css
+++ b/src/templates/customStyle.css
@@ -2,3 +2,12 @@
     margin-bottom: 5px;
     margin-top: 5px;
 }
+.footer {
+    width: 100%;
+    height : 60px;
+    display: inline-block;
+}
+.content {
+    width : 100%;
+    display: inline-block;
+}
