--- a/src/templates/customStyle.css
+++ b/src/templates/customStyle.css
@@ -239,3 +239,12 @@
   .space-30 {
     margin: 30px 0;
   }
+  .footer {
+    width: 100%;
+    height : 60px;
+    display: inline-block;
+}
+.content {
+    width : 100%;
+    display: inline-block;
+}
